# esp32_4wd

./: CMakeLists.txt  pinmap.md  protocol.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
main/app/: main.c
main/config/: config.h
main/modules/battery/: battery.c  battery.h
main/modules/led/: board_led.c  board_led.h
main/modules/motor/: motor_control.c  motor_control.h
main/modules/ros2/: ros2_msgs.c  ros2_msgs.h
main/modules/rp3/: rp3_receiver.c  rp3_receiver.h
main/modules/uart/: uart_bridge.c  uart_bridge.h
main/modules/usb/: usb_bridge.c  usb_bridge.h
utils/: conftest.py  protocol_common.py  test_config.yaml  test_perf.py  test_protocol.py
