idf_component_register(SRCS "app/main.c"
                            "modules/battery/battery.c"
                            "modules/led/board_led.c"
                            "modules/motor/motor_control.c"
                            "modules/rp3/rp3_receiver.c"
                            "modules/usb/usb_bridge.c"
                       PRIV_REQUIRES "esp_driver_rmt" "esp_driver_pcnt" "esp_timer" "esp_driver_i2c" "esp_driver_uart" "tinyusb"
                       INCLUDE_DIRS "."
                                    "config"
                                    "modules/battery"
                                    "modules/led"
                                    "modules/motor"
                                    "modules/rp3"
                                    "modules/usb")
